:lipstick: Fixed alignment and overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,6 +112,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 // * {
 //   overflow: visible !important;
